# PHPMax

./: .gitignore  .mailmap  .pre-commit-config.yaml  GEMINI.md  Justfile  README.md  composer.json  phpstan.neon  phpunit.xml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: publish.yml  tests.yml
docs/: account.rst  auth.rst  chats.rst  client.rst  conf.py  examples.rst  faq.rst  files.rst  formatting.rst  getting-started.rst  index.rst  messages.rst  release-2-1-0.rst  release-2-1-1.rst  release-2-1-2.rst  release-2-1-3.rst  release-2-2-0.rst  release-2-3-0.rst  release-2-3-1.rst  router.rst  troubleshooting.rst  users.rst
docs/api/: auth.rst  client-client.rst  client-config.rst  client-web.rst  client.rst  files.rst  router.rst
docs/phpmax/: README.md  architecture.md  contracts.json  contracts.md  decision-log.md  documentation.md  implementation-status.md  release.md  roadmap.md  shared-hosting-runtime.md  testing.md  upstream-sync.md
docs/types/: audio_attachment.rst  call_attachment.rst  chat.rst  contact_attachment.rst  contact_info.rst  control_attachment.rst  element.rst  enums.rst  file_attachment.rst  folder.rst  folder_list.rst  folder_update.rst  index.rst  inline_keyboard_attachment.rst  message.rst  message_delete_event.rst  message_read_event.rst  name.rst  photo_attachment.rst  presence_event.rst  profile.rst  reaction_counter.rst  reaction_info.rst  reaction_update_event.rst  read_state.rst  session.rst  share_attachment.rst  sticker_attachment.rst  sync_overrides.rst  sync_state.rst  typing_event.rst  user.rst  video_attachment.rst
src/PHPMax/: Client.php  WebClient.php
src/PHPMax/Api/: ApiFacade.php  Binding.php
src/PHPMax/Auth/: AuthFlowInterface.php  AuthResult.php  ConsoleEmailCodeProvider.php  ConsolePasswordProvider.php  ConsoleQrHandler.php  ConsoleSmsCodeProvider.php  EmailCodeProviderInterface.php  PasswordProviderInterface.php  QrAuthFlow.php  QrHandlerInterface.php  SmsAuthFlow.php  SmsCodeProviderInterface.php
src/PHPMax/Config/: ClientOptions.php
src/PHPMax/Dispatch/: ErrorContext.php  ErrorScope.php  EventMapper.php  EventResolver.php  EventType.php  Router.php
src/PHPMax/Domain/: AccessType.php  AttachmentType.php  Chat.php  ChatType.php  ContactInfo.php  Element.php  ElementAttributes.php  FileRequest.php  Folder.php  FolderList.php  FolderUpdate.php  InitData.php  LoginConfig.php  LoginResponse.php  MaxApiError.php  Member.php  Message.php  MessageStatus.php  Name.php  Presence.php  Profile.php  ReactionCounter.php  ReactionInfo.php  ReadState.php  Session.php  SyncOverrides.php  SyncState.php  TranscriptionStatus.php  User.php  VideoRequest.php
src/PHPMax/Exception/: ApiException.php  PHPMaxException.php  ProtocolException.php  UploadException.php  ValidationException.php
src/PHPMax/Files/: BaseFile.php  File.php  Photo.php  Video.php
src/PHPMax/Formatting/: Formatter.php
src/PHPMax/Protocol/: Command.php  FrameProtocolInterface.php  InboundFrame.php  Opcode.php  OutboundFrame.php
src/PHPMax/Runtime/: App.php  ConnectionManager.php  ExecutionBudget.php  FrameReaderInterface.php  TcpFrameReader.php  WebSocketFrameReader.php
src/PHPMax/Session/: JsonFileSessionStore.php  SQLiteSessionStore.php  SessionInfo.php  SessionStoreInterface.php
src/PHPMax/Support/: Model.php
src/PHPMax/Transport/: MessageTransportInterface.php  ProxyConfig.php  ProxyConnector.php  TcpTransport.php  TransportInterface.php  WebSocketTransport.php
src/pymax/: __init__.py  app.py  base.py  client.py  client_web.py  config.py  exceptions.py  logging.py  routers.py
src/pymax/api/: __init__.py  binding.py  facade.py  models.py  response.py
src/pymax/auth/: __init__.py  base.py  models.py  providers.py  qr.py  service.py  sms.py
src/pymax/connection/: connection.py  pending.py
src/pymax/dispatch/: __init__.py  dispatcher.py  enums.py  mapping.py  resolvers.py  router.py
src/pymax/files/: __init__.py  base.py  file.py  photo.py  static.py  video.py
src/pymax/formatting/: markdown.py
src/pymax/infra/: auth.py  base.py  chat.py  message.py  protocol.py  self.py  user.py
src/pymax/protocol/: __init__.py  base.py  enums.py  models.py
src/pymax/session/: __init__.py  models.py  protocol.py  store.py
tests/: conftest.py  test_logging.py
tests-php/: bootstrap.php
tests-php/Account/: AccountServiceTest.php
tests-php/Auth/: AuthServiceTest.php
tests-php/Bots/: BotsServiceTest.php
tests-php/Chats/: ChatServiceTest.php
tests-php/Client/: ClientLifecycleTest.php
tests-php/Contracts/: ContractManifestTest.php
tests-php/Dispatch/: ErrorScopeTest.php  EventDispatchTest.php
tests-php/Domain/: DomainBindingTest.php
tests-php/Files/: BaseFileUrlTest.php
tests-php/Formatting/: FormatterParityTest.php
tests-php/Messages/: MessageServiceTest.php
tests-php/Protocol/: BinaryPayloadTest.php  TcpProtocolTest.php  WsProtocolTest.php
tests-php/Runtime/: ConnectionManagerTest.php
tests-php/Support/: ContractManifestTest.php  IntegrationCheckTest.php  Php74CompatCheckTest.php  ReleaseBuildTest.php
tests-php/Telemetry/: TelemetryServiceTest.php
tests-php/Transport/: ProxyConfigTest.php  ProxyConnectorTest.php  WebSocketTransportTest.php
tests-php/Unit/: ModelHydrationTest.php  SessionStoreTest.php  UserAgentPayloadTest.php
tests-php/Uploads/: NativeHttpUploaderTest.php  UploadServiceTest.php
tests-php/Users/: UserServiceTest.php
tests/api/: test_auth_service.py  test_chat_user_self_session_services.py  test_message_service.py  test_upload_service.py
tests/app/: test_app_runtime.py
tests/auth/: test_auth_flows.py
tests/connection/: test_connection.py  test_readers_and_transports.py
tests/dispatch/: test_dispatcher.py
tests/domain/: test_bound_models.py  test_message_models.py  test_user_models.py
tests/files/: test_files_and_formatting.py
tests/protocol/: test_protocols.py
tests/session/: test_store.py
tests/telemetry/: test_telemetry.py
tools/: build-release.php  contract-manifest.php  integration-check.php  php74-compat-check.php  run-php-tests.php
(+243 files in other folders)
