[project]
name = "maxapi-python"
version = "2.0.0"
description = "Python wrapper для API мессенджера Max"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ink", email = "inkdev@proton.me" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["max", "messenger", "api", "wrapper", "websocket", "asyncio", "tcp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Framework :: AsyncIO",
  "Typing :: Typed",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "aiofiles>=25.1.0",
  "aiohttp>=3.13.5",
  "aiosqlite>=0.22.1",
  "msgpack>=1.1.2",
  "pydantic>=2.10.0",
  "python-socks[asyncio]>=2.8.1",
  "qrcode>=8.2",
  "websockets>=16.0",
]

[project.urls]
Homepage = "https://github.com/MaxApiTeam/PyMax"
Repository = "https://github.com/MaxApiTeam/PyMax"
Issues = "https://github.com/MaxApiTeam/PyMax/issues"
Documentation = "https://maxapiteam.github.io/PyMax/"

[project.optional-dependencies]
docs = [
  "furo>=2025.12.19",
  "sphinx>=8.1.3",
  "sphinx-copybutton>=0.5.2",
]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "pytest-timeout>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pymax"]
artifacts = ["src/pymax/py.typed"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.codex",
  "/.venv",
  "/__pycache__",
  "/cache",
  "/cache2",
  "/cache*",
  "/tests2",
  "**/*.db",
  "**/*.sqlite",
  "**/*.sqlite3",
]

[dependency-groups]
docs = [
  "furo>=2025.12.19",
  "sphinx>=8.1.3",
  "sphinx-copybutton>=0.5.2",
]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "pytest-timeout>=2.1.0",
]
dev = [
  {include-group = "docs"},
  {include-group = "test"},
  "build>=1.2.0",
  "twine>=5.0.0",
  "pyright>=1.1.390",
  "black>=24.0.0",
  "isort>=5.13.0",
  "flake8>=7.0.0",
]

[tool.pyright]
venv = ".venv"
venvPath = "."

[tool.black]
line-length = 79
target-version = ["py310"]

[tool.flake8]
max-line-length = 79
max-complexity = 10

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
  "integration: integration tests",
  "slow: slow tests",
]

[tool.coverage.run]
source = ["src/pymax"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "@(abc\\.)?abstractmethod",
]
