[project]
name = "maxapi-python"
version = "2.1.2"
description = "Python wrapper для API мессенджера Max"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ink", email = "inkdev@proton.me" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["max", "messenger", "api", "wrapper", "websocket", "asyncio", "tcp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Framework :: AsyncIO",
  "Typing :: Typed",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "aiofiles>=25.1.0",
  "aiohttp>=3.13.5",
  "aiosqlite>=0.22.1",
  "msgpack>=1.1.2",
  "pydantic>=2.10.0",
  "python-socks[asyncio]>=2.8.1",
  "qrcode>=8.2",
  "websockets>=16.0",
]

[project.urls]
Homepage = "https://github.com/MaxApiTeam/PyMax"
Repository = "https://github.com/MaxApiTeam/PyMax"
Issues = "https://github.com/MaxApiTeam/PyMax/issues"
Documentation = "https://maxapiteam.github.io/PyMax/"

[project.optional-dependencies]
docs = [
  "furo>=2025.12.19",
  "sphinx>=8.1.3",
  "sphinx-copybutton>=0.5.2",
]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "pytest-timeout>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pymax"]
artifacts = ["src/pymax/py.typed"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.codex",
  "/.venv",
  "/__pycache__",
  "/cache",
  "/cache2",
  "/cache*",
  "/tests2",
  "**/*.db",
  "**/*.sqlite",
  "**/*.sqlite3",
]

[dependency-groups]
docs = [
  "furo>=2025.12.19",
  "sphinx>=8.1.3",
  "sphinx-copybutton>=0.5.2",
]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "pytest-timeout>=2.1.0",
]
dev = [
  {include-group = "docs"},
  {include-group = "test"},
  "build>=1.2.0",
  "pre-commit>=4.0.0",
  "twine>=5.0.0",
  "pyright>=1.1.390",
  "ruff>=0.8.0",
]

[tool.pyright]
venv = ".venv"
venvPath = "."

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/pymax/**/__init__.py" = ["F401", "F403"]
"tests/**" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
  "integration: integration tests",
  "slow: slow tests",
]

[tool.coverage.run]
source = ["src/pymax"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "@(abc\\.)?abstractmethod",
]
